# amazon-neptune-generative-ai-samples

./: .gitignore  README.md
blogs/: README.md
blogs/Knowledge_Graph_Enhanced_RAG_(GraphRAG)_using_Amazon_Neptune_and_LlamaIndex/: Knowledge_Graph_Retreival_with_LlamaIndex.ipynb  Natural_Language_Querying_with_LlamaIndex.ipynb  README.md
natural_language_querying/: Natural_Language_Querying_LangChain_Gremlin.ipynb  Natural_Language_Querying_LangChain_openCypher.ipynb  README.md
neptune-mcp-servers/: .gitignore  README.md
neptune-mcp-servers/neptune-memory/: README.md  memory.py  models.py  neptune.py  pyproject.toml  server.py
neptune-mcp-servers/neptune-memory/src/neptune_memory_mcp_server/: memory.py  models.py  neptune.py  server.py
neptune-mcp-servers/neptune-ops/: pyproject.toml
neptune-mcp-servers/neptune-query/: README.md  models.py  neptune.py  pyproject.toml  server.py
neptune-mcp-servers/neptune-query/neptune_query.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
neptune-mcp-servers/neptune-query/src/neptune_query_mcp_server/: neptune.py  server.py
presentations/: README.md
presentations/Data-models-for-Amazon-Neptune-using-gen-AI-and-diagram-as-code-tools/: Data models for Amazon Neptune using gen AI and diagram-as-code tools.ipynb  README.md
presentations/GraphThat_Ep3_RAG_and_GraphRAG/: GraphThat_Ep3.ipynb  README.md
presentations/GraphThat_Ep3_RAG_and_GraphRAG/data/: comprehend_events_amazon_press_releases.20201118.v1.4.1 (1).jsonl
presentations/Unlocking-data-for-GenAI-using-Graph-Databases/: README.md  UnlockingGenAIForGraph-Meta.ipynb
solutions/: README.md
solutions/agent-memory/: .env.example  .gitignore  README.md  app.py  graphiti_core-0.18.5-py3-none-any.whl  load_all_frameworks.py  main.py  pyproject.toml
solutions/agent-memory/cognee/: cognee_neptune.py
solutions/agent-memory/frameworks/: __init__.py  cognee_neptune.py  graphiti_neptune.py  mem0_neptune.py
solutions/agent-memory/mem0/: mem0_neptune.py
solutions/agent-memory/tools/: flights.py  general_assistant.py  memory_tool.py  weather_agent.py
solutions/agent-memory/zep_graphiti/: __init__.py  graphiti_neptune.py
solutions/data/: nodes.csv
solutions/graphrag-toolkit/: batch_graphrag_terminal_script.py
solutions/graphrag-toolkit/batch_processing_script/: README.md  batch_graphrag_terminal_script.py  requirements.txt
solutions/graphrag-toolkit/notebooks/: Getting Started Guide to GraphRAG using the GraphRAG Toolkit.ipynb
solutions/mcp/notebooks/: Getting started using Strands Agents and Neptune MCP.ipynb  Strands Agents with Neptune MCP Exercise.ipynb
solutions/pages/: 1_Natural_Language_Querying.py
solutions/sbom-chatbot/: .gitignore  DisplayResult.py  Home.py  KnowledgeGraphEnhancedRAG.py  KnowledgeGraphRetrieval.py  NaturalLanguageQuerying.py  QueryCorrector.py  README.md  graph.py  llm.py  nlq.py  requirements.txt  utils.py
solutions/sbom-chatbot/pages/: 1_Natural_Language_Querying.py  1_Natural_Language_Querying_(open_world).py  2_Knowledge_Graph_Retrieval.py  2_Natural_Language_Querying_(closed_world).py  3_Knowledge_Graph_Enhanced _RAG _(GraphRAG).py
solutions/sbom-pgi-chatbot/: DefinedDomainQA.py  DisplayResult.py  GraphEnhancedRAG.py  Home.py  KnowledgeGraphEnhancedRAG.py  KnowledgeGraphRetrieval.py  OpenDomainQA.py  README.md  llm.py  requirements.txt  test.py  utils.py
solutions/sbom-pgi-chatbot/pages/: 1_Open_Domain_Question_Answering.py  (+4 more)
workshops/: README.md
workshops/Building_Generative_AI_applications/: README.md  workshop.yml
workshops/Ontology_Semantic_Layer_KGC/: README.md  architecture.drawio
(+55 files in other folders)
