[project]
name = "neptune-query-mcp-server"
version = "0.0.9"
description = "This is an MCP server that allows users to query Amazon Neptune Database or Analytics usign Gremlin or openCypher"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-aws>=0.2.19",
    "mcp[cli]>=1.6.0",
]

[project.scripts]
neptune-query-mcp-server = "neptune_query_mcp_server.server:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
exclude = ["__init__.py"]
select = ["C", "D", "E", "F", "I", "W"]
ignore = ["C901", "E501", "E741", "F402", "F823", "D100", "D106"]

[tool.ruff.lint.isort]
lines-after-imports = 2
no-sections = true

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = ["F704"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.hatch.build.targets.wheel]
sources = ["src/"]
